# webtest-framework

./: .gitignore  README.md  pyproject.toml
examples/: sample_page.py
src/webtest_framework/: __init__.py  api.py  assertions.py  config.py  fixtures.py  page.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_page.py
